Fix spacing in closing time

--- a/src/index.css
+++ b/src/index.css
@@ -392,6 +392,8 @@ path:hover {
   font-size: 14px;
   font-weight: bold;
   color: white;
+  display: flex;
+  align-self: flex-end;
 }
 
 .current-price {
